kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  namespace: alex-resume-website
  labels:
    app: resume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: resume
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: resume
      containers:
        - name: resume
          image: trow.capitl.io/alex-resume-website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
