kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume
  namespace: alex-resume-website
  labels:
    app: resume
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: resume
